--- a/src/styles/book.less
+++ b/src/styles/book.less
@@ -1,6 +1,40 @@
+.bookShelf{
+  padding-top: 30rpx;
+  padding-left: 40rpx;
+
+  .bookShelf-item{
+    margin-right: 35rpx;
+    margin-bottom: 35rpx;
+  }
+}
+
 .bookShelf-item {
   display: inline-block;
-  height: 300rpx;
   width: 200rpx;
-  background-color: #ddd;
+  color: #c85715;
+}
+
+.book-cover{
+  width: 100%;
+  height: 300rpx;
+  border-radius: 8rpx;
+  box-shadow: 0 2rpx 8rpx 0 #A59B62;
+  overflow: hidden;
+  
+  image{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.book-title{
+  margin-top: 10rpx; 
+  font-size: 30rpx;
+  line-height: 42rpx;
+  width:auto;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+  word-wrap:normal;
+  word-break:break-all;
 }
