--- a/src/styles/book.less
+++ b/src/styles/book.less
@@ -9,7 +9,7 @@
 }
 
 .bookShelf-item {
-  display: inline-block;
+  float: left;
   width: 200rpx;
   color: #c85715;
 }
@@ -24,6 +24,15 @@
   image{
     width: 100%;
     height: 100%;
+  }
+}
+
+.book-add-more{
+  display: flex;
+  align-items: center; /*垂直居中*/
+  justify-content: center; /*水平居中*/  
+  image{
+    width: 100rpx;
   }
 }
 
